--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"cors": "^2.8.1",
 		"dotenv": "^8.2.0",
 		"express": "^4.14.0",
+		"jsdom": "^22.1.0",
 		"mocha": "^10.2.0",
 		"mongodb": "^5.7.0",
 		"mongoose": "^7.4.2",
